--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sa/module-content",
+    "name": "saxilais/module-content",
     "description": "",
     "type": "magento2-module",
     "license": "proprietary",
