Add: repman on repository

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "files": [
             "registration.php"
         ]
-    }
+    },
+    "repositories": [
+        {"type": "composer", "url": "https://simon-axilais.repo.repman.io"}
+    ]
 }
